--- a/css/styles.css
+++ b/css/styles.css
@@ -868,6 +868,15 @@ img {
   justify-content: center;
 }
 
+.modal-close-icon {
+  transition: fill var(--transition-param);
+}
+
+.modal-close-icon:hover, 
+.modal-close-icon:focus {
+  fill: var(--gray-blue);
+}
+
 .backdrop.is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -890,6 +899,8 @@ img {
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
   color: var(--maine_color);
+  margin-bottom: 10px;
+  display: block;
 }
 
 .input-label-text {
@@ -900,7 +911,6 @@ img {
 .input-wrap {
   position: relative;
   display: block;
-  margin-bottom: 10px;
 }
 
 .modal-input {
@@ -909,11 +919,12 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
   color: var(--gray-black);
-  padding: 16px 12px 16px 42px;
+  padding-left: 42px;
+  padding-right: 12px;
   outline: transparent;
   transition: border-color var(--transition-param);
 }
@@ -926,13 +937,17 @@ img {
   fill: var(--gray-blue);
 }
 
+.modal-field {
+    margin-bottom: 20px;
+}
+
 .modal-text {
   width: 100%;
   height: 120px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   font-weight: 400;
-  font-size: 12px;
+  font-size: 14px;
   line-height: calc(14 / 12);
   letter-spacing: 0.01em;
   color: var(--gray-black);
@@ -940,7 +955,6 @@ img {
   resize: none;
   display: block;
   margin-top: 4px;
-  margin-bottom: 20px;
   outline: transparent;
   transition: border-color var(--transition-param);
 }
